--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ color-eyre = "0.6.3"
 crossterm = { version = "0.28.1", features = ["event-stream"] }
 futures = "0.3.31"
 ratatui = "0.29.0"
+serde = { version = "1.0.218", features = ["derive"] }
+serde_json = "1.0.139"
 tokio = { version = "1.40.0", features = ["full"] }
 
